# 2026-bot-workin

./: .gitignore  Assist.md  Contribguide.md  Controls.md  README.md  build.gradle  commitguide.md  file_breakdown.md  spring-break-instructions.md  todo before compition .md
.github/: pull_request_template.md
autoaim assorted/autoaim algorithm/: Cargo.toml  Makefile  autoaim_test
autoaim assorted/autoaim algorithm/cpp/: main.cpp
autoaim assorted/autoaim algorithm/include/: autoaim.h
autoaim assorted/autoaim algorithm/src/: lib.rs  main.rs
coral/: test_coral.py
dashboard/: requirements.txt
src/main/java/frc/robot/: AutoAimConstants.java  BuildConstants.java  CameraConstants.java  Constants.java  DriveConstants.java  Main.java  Robot.java  RobotContainer.java  ShooterState.java  SpeedConstants.java
src/main/java/frc/robot/commands/: AimCommand.java  AutoAimCommand.java  DefaultDrive.java  FireCommand.java  FlywheelCommand.java  PitHealthCheckCommand.java
src/test/java/frc/robot/: AutoAimCalculationsTest.java  FireCommandLogicTest.java  FireControlSubsystemTest.java  HelperFunctionsTest.java  IntakeSubsystemTest.java  LoaderSubsystemTest.java  RobotTest.java  TurretAngleConversionTest.java  TurretSubsystemTest.java
thalia tweaks/: README.md  build.sh  main.cpp
thalia tweaks/src/: main.rs
thalia-tweaks/: Cargo.toml  README.md  thalia_tweaks_gui
thalia-tweaks/src/: main.rs
utilities/: autoaim_regression_cli.py  autoaim_regression_gui.py  c_cpp_robotics_suggestions.md
utilities/pit-health-check-gui/src/: main.rs
vendordeps/: ThriftyLib.json
(+21 files in other folders)
