[package]
name = "thalia-tweaks"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[[bin]]
name = "thalia-tweaks"
path = "src/main.rs"
